рабочая версия (добавляются рекомендации)